--- a/01_omikuji_kimetsu/css/omikuji.css
+++ b/01_omikuji_kimetsu/css/omikuji.css
@@ -41,7 +41,9 @@ body {
     cursor: pointer;
     /*カーソルをポインターの形（かたち）にする*/
 }
-
+#btn99:hover {
+  background: linear-gradient(#da70d6 0%, pink 100%);
+}
 .backImg {
     background-image: url(../img/shinobu.png);
     background-position: 50% 10px;
