--- a/10a_omikuji/css/okumiji.css
+++ b/10a_omikuji/css/okumiji.css
@@ -69,12 +69,22 @@ header {
   /*カーソルをポインターの形（かたち）にする*/
 }
 
+#btn99 {
+  padding: 0.5em;
+  border-radius: 0.3em;
+  color: whitesmoke;
+  font-size: 1.5em;
+  background: rgb(26, 212, 212);
+  cursor: pointer;
+  /*カーソルをポインターの形（かたち）にする*/
+}
+
 #btn1 {
   position: relative;
-  margin: 29px auto;
-  width: 200px;
-  height: 400px;
-  background-image: url(../img/omikuji.png);
+  margin: 0px auto;
+  width: 280px;
+  height: 280px;
+  background-image: url(../img/omikuji3.png);
   background-size: contain;
   background-repeat: no-repeat;
   cursor: pointer;
@@ -84,6 +94,41 @@ header {
 #btn1:hover {
   animation: shaking 0, 3s infinite;
 }
+
+#btn99:hover {
+  background: linear-gradient(#da70d6 0%, pink 100%);
+}
+
+#btn99 {
+  padding: 0.5em;
+  border-radius: 0.3em;
+  color: whitesmoke;
+  font-size: 1.5em;
+  background: rgb(26, 212, 212);
+  cursor: pointer;
+  /*カーソルをポインターの形（かたち）にする*/
+}
+#btn99:hover {
+  background: linear-gradient(#da70d6 0%, pink 100%);
+}
+
+#btn1 {
+  position: relative;
+  margin: 0px auto;
+  width: 280px;
+  height: 280px;
+  background-image: url(../img/omikuji3.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  user-select: none;
+}
+
+#btn1:hover {
+  animation: shaking 0, 3s infinite;
+}
+
+
 
 @keyframes shaking {
   0% {
