--- a/09_okumiji/css/okumiji.css
+++ b/09_okumiji/css/okumiji.css
@@ -58,15 +58,6 @@ header {
   text-align: left;
 }
 
-#btn99 {
-  padding: 0.5em;
-  border-radius: 0.3em;
-  color: whitesmoke;
-  font-size: 1.5em;
-  background: rgb(26, 212, 212);
-  cursor: pointer;
-  /*カーソルをポインターの形（かたち）にする*/
-}
 
 #btn1 {
   position: relative;
@@ -86,16 +77,26 @@ header {
   cursor: pointer;
   user-select: none;
 }
-
 #btn1:hover {
   background: linear-gradient(#da70d6 0%, pink 100%);
 }
-
 #btn1:active {
   position: relative;
   top: 5px;
   left: 5px;
   box-shadow: 0 5px 0 grey;
+}
+#btn99 {
+  padding: 0.5em;
+  border-radius: 0.3em;
+  color: whitesmoke;
+  font-size: 1.5em;
+  background: rgb(26, 212, 212);
+  cursor: pointer;
+  /*カーソルをポインターの形（かたち）にする*/
+}
+#btn99:hover {
+  background: linear-gradient(#da70d6 0%, pink 100%);
 }
 
 
